--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 services:
   apache:
     hostname: apache
-    build: ./apache-alpine
+    build: apache
     volumes:
       - /var/log/apache-log:/var/log/apache2
     ports:
