--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,12 +1,17 @@
-FROM alpine
+FROM alpine:latest
 
-RUN apt-get update
-RUN apt-get -y install mysql
+COPY ./entrypoint.sh /
 
-ADD templates /opt/templates
-COPY requirements.txt .
-RUN pip install -r requirements.txt
-COPY todo.py /opt
-COPY todo.cfg /opt
+RUN addgroup -S mysql \
+    && adduser -S mysql -G mysql \
+    && apk add --no-cache mysql mysql-client \
+    && rm -f /var/cache/apk/* \
+    && awk '{ print } $1 ~ /\[mysqld\]/ && c == 0 { c = 1; print "skip-host-cache\nskip-name-resolve\nlower_case_table_names=1"}' /etc/mysql/my.cnf > /tmp/my.cnf \
+    && mv /tmp/my.cnf /etc/mysql/my.cnf \
+    && mkdir /run/mysqld \
+    && chown -R mysql:mysql /run/mysqld \
+    && chmod -R 777 /run/mysqld
 
-ENTRYPOINT FLASK_APP=/opt/todo.py flask run --host=0.0.0.0
+EXPOSE 3306
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["mysqld", "--user=mysql"]
