--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -3,8 +3,9 @@ FROM alpine
 RUN apk update
 RUN apk add apache2 git
 
-WORKDIR /etc/apache2/
-RUN git -C /var/www/localhost/htdocs clone https://github.com/Tiamat59/crossover.git
+WORKDIR var/www/localhost/
+RUN rm -rf htdocs
+RUN git clone https://github.com/Tiamat59/crossover.git htdocs
 
 EXPOSE 80
 CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
